vlib/v/checker/tests/generic_interface_err.vv
struct Struct<T> {
	value int
}

interface Interface<T> {
	method() T
}

s := Struct{7}
i := Interface(s)
